Fixed Sonar security issue